--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
-        "axios": "^1.6.4",
+        "axios": "^1.7.5",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.41",
         "tailwindcss": "^3.4.10",
@@ -16,6 +16,7 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^5.1.2",
         "vue": "^3.4.38",
-        "vue-router": "^4.4.3"
+        "vue-router": "^4.4.3",
+        "vuex": "^4.0.2"
     }
 }
