--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^5.1.2",
         "vue": "^3.4.38",
-        "vue-router": "^4.4.3",
-        "vuex": "^4.0.2"
+        "vue-router": "^4.4.3"
     }
 }
